--- a/reflections/index.html
+++ b/reflections/index.html
@@ -461,15 +461,20 @@
           </h3>
 
           <p>Faith was never meant to destroy the mind but to guide it toward clarity. Real belief must enlighten, not enslave.</p>
+          <div class="playlist">
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3"
+                    data-title="the madness if faith">
+              ▶ The MADNESS OF FAITH
+            </button>
 
-          <section class="audio-wrap" id="audioMount-madness">
-            <p class="label">🎧 : <strong>The Madness of Faith</strong></p>
-            <audio controls preload="auto" style="width:100%">
-              <source src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3" type="audio/mpeg">
-              Your browser does not support the audio element.
-            </audio>
-          </section>
-
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-god-we-created/the-gods-we-create.mp3"
+                    data-title="The God We Created">
+              ▶ The God We Created (Short)
+            </button>
+          </div>
+          
           <div class="meta">
             First Edition 2025 •
             <div class="share-group"
