--- a/reflections/index.html
+++ b/reflections/index.html
@@ -478,8 +478,7 @@
           <div class="meta">
             <div class="share-group"
                  data-share-url="https://stonegrillresto.net/reflections/pages/the-madness-of-fath/read.html"
-                 data-share-title="The Madness of Faith — Ninox Antolihao"></div>
-                First Edition 2025 •
+                 data-share-title="The Madness of Faith — Ninox Antolihao">First Edition 2025 •</div>
           </div>
         </div>
       </article>
