--- a/reflections/index.html
+++ b/reflections/index.html
@@ -17,7 +17,7 @@
   <!-- Global assets -->
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=19">
   <!-- ✅ Your playlist/global-player CSS is here -->
-  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=19">
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=21">
 
   <script src="/reflections/assets/audio-system.js?v=14"></script>
   <link rel="manifest" href="/reflections/manifest.json?v=3">
@@ -81,7 +81,19 @@
           </h3>
 
           <p>On devotion as reflection — how what we honor, we become.</p>
+          <div class="playlist">
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/mirror-of-worship/themirrorofworship.mp3"
+                    data-title="The Mirror of WORSHIP">
+              ▶ The Mirror of WORSHIP
+            </button>
 
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-paradox-of-god/paradoxofgod.mp3"
+                    data-title="Paradox of God">
+              ▶ Paradox of God
+            </button>
+          </div>
           <p class="meta">
             Reflection • Essay •
             <a class="title-link" href="/reflections/pages/mirror-of-worship/mirror-of-worship.pdf" target="_blank" rel="noopener">PDF</a>
@@ -90,14 +102,6 @@
           <div class="share-group"
                data-share-url="https://stonegrillresto.net/reflections/pages/mirror-of-worship/read.html"
                data-share-title="The Mirror of Worship — Ninox Antolihao"></div>
-
-          <section class="audio-wrap" id="audioMount-mirror-of-worship">
-            <p class="label">🎧 click to Listen <strong>The Diety</strong></p>
-            <audio controls preload="auto" style="width:100%">
-              <source src="/reflections/pages/mirror-of-worship/themirrorofworship.mp3" type="audio/mpeg">
-              Your browser does not support the audio element.
-            </audio>
-          </section>
         </div>
       </article>
 
@@ -127,13 +131,17 @@
             <button class="track-link" type="button"
                     data-src="/reflections/pages/divine-hiddeness/premiseofgod.mp3"
                     data-title="premise of god)">
-              ▶ Divine premise (Full)
+              ▶ Divine premise
             </button>
-
+             <button class="track-link" type="button"
+                    data-src="/reflections/pages/initial-premise/initial-premise.mp3"
+                    data-title="The Initial Premise">
+              ▶ The Initial Premise of perfect loving God
+            </button>
             <button class="track-link" type="button"
                     data-src="/reflections/pages/the-god-we-created/the-gods-we-create.mp3"
                     data-title="The God We Created">
-              ▶ The God We Created (Short)
+              ▶ The God We Created
             </button>
           </div>
 
@@ -162,17 +170,21 @@
               THE DIVINE PREMISE
             </a>
           </h3>
-
           <p>.Goodness is not the absence of darkness, but the discipline of not becoming it.</p>
+          
+          <div class="playlist">
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/moral-choice/moralchoice.mp3"
+                    data-title="Moral choice">
+              ▶ Moral Choice
+            </button>
 
-          <section class="audio-wrap" id="audio-moral-choice">
-            <p class="label">🎧 the devine premise</p>
-            <audio controls preload="auto" style="width:100%">
-              <source src="/reflections/pages/moral-choice/moralchoice.mp3" type="audio/mpeg">
-              Your browser does not support the audio element.
-            </audio>
-          </section>
-
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/divine-hiddeness/premiseofgod.mp3"
+                    data-title="The Divine Premise">
+              ▶ The Divine Premise
+            </button>
+          </div>
           <div class="share-group"
                data-share-url="https://stonegrillresto.net/reflections/pages/moral-choice/read.html"
                data-share-title="Moral Choice — Ninox Antolihao"></div>
@@ -200,18 +212,24 @@
           </h3>
 
           <p>through philosophy, theology, and psychology, converging a profound idea that duality—the perceived separation between the self and the world</p>
+          <div class="playlist">
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/oneness-duality/onenessduality.mp3"
+                    data-title="Oneness Duality">
+              ▶ Oneness Duality
+            </button>
 
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/divine-hiddeness/premiseofgod.mp3"
+                    data-title="The Divine Premise">
+              ▶ The Divine Premise
+            </button>
+          </div>
           <p class="meta">
             First Edition 2025 •
             <a class="title-link" href="/reflections/pages/oneness-duality/index.html" target="_blank" rel="noopener">PDF</a>
           </p>
-           <section class="audio-wrap" id="audioMount-onenessduality">
-            <p class="label">🎧: <strong>Onenesd and Duality</strong></p>
-            <audio controls preload="auto" style="width:100%"> 
-              <source src="/reflections/pages/oneness-duality/onenessduality.mp3" type="audio/mpeg">
-              Your browser does not support the audio element.
-            </audio>
-          </section>
+           
           <div class="share-group"
                data-share-url="https://stonegrillresto.net/reflections/pages/oneness-duality/read.html"
                data-share-title="From Oneness to Duality — Ninox Antolihao"></div>
@@ -283,19 +301,23 @@
           </h3>
 
           <p>Do you think recognizing that our concept of God has evolved helps or hinders interfaith dialogue?</p>
+          <div class="playlist">
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-god-we-created/the-gods-we-create.mp3"
+                    data-title="The God We Create">
+              ▶ The God We Create
+            </button>
 
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3"
+                    data-title="The Madness of Faith">
+              ▶ The Madness of Faith
+            </button>
+          </div>
           <p class="meta">
             First Edition 2025 •
             <a class="title-link" href="/reflections/pages/the-god-we-created/The_God_We_created.pdf" target="_blank" rel="noopener">PDF</a>
           </p>
-
-          <section class="audio-wrap" id="audioMount-we-created-god">
-            <p class="label">🎧: <strong>The God We Create</strong></p>
-            <audio controls preload="auto" style="width:100%">
-              <source src="/reflections/pages/the-god-we-created/the-gods-we-create.mp3" type="audio/mpeg">
-              Your browser does not support the audio element.
-            </audio>
-          </section>
 
           <div class="share-group"
                data-share-url="https://stonegrillresto.net/reflections/pages/the-god-we-created/read.html"
@@ -333,14 +355,14 @@
           <div class="playlist">
             <button class="track-link" type="button"
                     data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3"
-                    data-title="The Paradox of God (Full)">
-              ▶ The Paradox of God (Full)
+                    data-title="The Paradox of God">
+              ▶ The Paradox of God
             </button>
 
             <button class="track-link" type="button"
                     data-src="/reflections/pages/the-paradox-of-god/paradoxofgod.mp3"
-                    data-title="Paradox of God (Short)">
-              ▶ Paradox of God (Short)
+                    data-title="Paradox of God">
+              ▶ Paradox of God
             </button>
           </div>
 
