--- a/reflections/index.html
+++ b/reflections/index.html
@@ -87,6 +87,12 @@
                     data-title="The Mirror of WORSHIP">
               ▶ The Mirror of WORSHIP
             </button>
+            
+             <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3"
+                    data-title="The Madness of Faith">
+              ▶ The Madness of Faith
+            </button>
 
             <button class="track-link" type="button"
                     data-src="/reflections/pages/the-paradox-of-god/paradoxofgod.mp3"
