--- a/reflections/index.html
+++ b/reflections/index.html
@@ -1078,20 +1078,25 @@
 })();
 </script>
 
-<!-- ✅ GLOBAL PLAYER CONTROLLER (ONE ONLY)
-   ✅ Player pops up ONLY after an audio is clicked
-   ✅ Auto-play next track across all cards
--->
 <script>
 (() => {
+  const playerWrap = document.getElementById('globalPlayer');
   const audio = document.getElementById('globalAudio');
   const source = document.getElementById('globalSource');
+
   const nowPlaying = document.getElementById('nowPlaying');
-  const playerWrap = document.getElementById('globalPlayer');
 
-  if (!audio || !source || !playerWrap) return;
+  const btnPrev = document.getElementById('btnPrev');
+  const btnPlay = document.getElementById('btnPlay');
+  const btnNext = document.getElementById('btnNext');
 
-  // Force hide on load
+  const seekBar = document.getElementById('seekBar');
+  const timeNow = document.getElementById('timeNow');
+  const timeDur = document.getElementById('timeDur');
+
+  if (!playerWrap || !audio || !source) return;
+
+  // hidden on load
   playerWrap.classList.remove('is-visible');
 
   let playlist = [];
@@ -1103,21 +1108,40 @@
 
   function setActive(btn){
     document.querySelectorAll('.track-link.active').forEach(b => b.classList.remove('active'));
-    btn && btn.classList.add('active');
+    if (btn) btn.classList.add('active');
   }
 
   function showPlayer(){
     playerWrap.classList.add('is-visible');
   }
 
-  function play(src, title, btn){
+  function fmt(t){
+    if (!isFinite(t) || t < 0) return "0:00";
+    const m = Math.floor(t / 60);
+    const s = Math.floor(t % 60);
+    return `${m}:${String(s).padStart(2,'0')}`;
+  }
+
+  function syncPlayIcon(){
+    if (!btnPlay) return;
+    btnPlay.textContent = audio.paused ? '▶' : '⏸';
+  }
+
+  function loadByIndex(i, autoplay=true){
+    rebuildPlaylist();
+    if (!playlist.length) return;
+
+    if (i < 0) i = playlist.length - 1;
+    if (i >= playlist.length) i = 0;
+
+    const btn = playlist[i];
+    const src = btn.dataset.src;
+    const title = btn.dataset.title || btn.textContent.replace(/^▶\s*/, '').trim() || 'Audio';
+
     if (!src) return;
 
+    currentIndex = i;
     showPlayer();
-
-    rebuildPlaylist();
-    if (btn) currentIndex = playlist.indexOf(btn);
-
     setActive(btn);
 
     if (source.getAttribute('src') !== src) {
@@ -1125,46 +1149,87 @@
       audio.load();
     }
 
-    if (nowPlaying) nowPlaying.textContent = 'Now playing: ' + (title || 'Audio');
-    audio.play().catch(()=>{});
+    if (nowPlaying) nowPlaying.textContent = title;
+
+    if (autoplay) audio.play().catch(()=>{});
+    syncPlayIcon();
   }
 
-  // capture phase, but only blocks clicks on track buttons
+  function playFromButton(btn){
+    rebuildPlaylist();
+    const i = playlist.indexOf(btn);
+    loadByIndex(i, true);
+  }
+
+  // ✅ Click-to-play from any .track-link button
   document.addEventListener('click', (e) => {
     const btn = e.target.closest('.track-link[data-src]');
     if (!btn) return;
 
+    // prevent any other click handlers from interfering
     e.preventDefault();
     e.stopPropagation();
     if (e.stopImmediatePropagation) e.stopImmediatePropagation();
 
     btn.blur && btn.blur();
-    play(btn.dataset.src, btn.dataset.title, btn);
+    playFromButton(btn);
   }, true);
 
+  // ✅ Autoplay next on end (loops)
   audio.addEventListener('ended', () => {
-    rebuildPlaylist();
+    if (currentIndex < 0) currentIndex = 0;
+    loadByIndex(currentIndex + 1, true);
+  });
 
-    const nextIndex = currentIndex + 1;
-    const nextBtn = playlist[nextIndex];
+  // ✅ Prev / Next buttons
+  btnPrev && btnPrev.addEventListener('click', () => {
+    if (currentIndex < 0) currentIndex = 0;
+    loadByIndex(currentIndex - 1, true);
+  });
 
-    if (!nextBtn) {
-      currentIndex = -1;
-      document.querySelectorAll('.track-link.active').forEach(b => b.classList.remove('active'));
+  btnNext && btnNext.addEventListener('click', () => {
+    if (currentIndex < 0) currentIndex = 0;
+    loadByIndex(currentIndex + 1, true);
+  });
+
+  // ✅ Play/Pause button
+  btnPlay && btnPlay.addEventListener('click', () => {
+    // if nothing loaded yet, start first track
+    if (!source.getAttribute('src')) {
+      loadByIndex(0, true);
       return;
     }
 
-    play(nextBtn.dataset.src, nextBtn.dataset.title, nextBtn);
+    showPlayer();
+
+    if (audio.paused) audio.play().catch(()=>{});
+    else audio.pause();
+
+    syncPlayIcon();
   });
 
-  audio.addEventListener('error', () => {
-    rebuildPlaylist();
-    const nextBtn = playlist[currentIndex + 1];
-    if (nextBtn) play(nextBtn.dataset.src, nextBtn.dataset.title, nextBtn);
+  // ✅ Progress + seeking
+  audio.addEventListener('loadedmetadata', () => {
+    if (timeDur) timeDur.textContent = fmt(audio.duration);
   });
 
+  audio.addEventListener('timeupdate', () => {
+    if (timeNow) timeNow.textContent = fmt(audio.currentTime);
+
+    if (seekBar && isFinite(audio.duration) && audio.duration > 0) {
+      seekBar.value = String(Math.round((audio.currentTime / audio.duration) * 1000));
+    }
+  });
+
+  seekBar && seekBar.addEventListener('input', () => {
+    if (!isFinite(audio.duration) || audio.duration <= 0) return;
+    const ratio = Number(seekBar.value) / 1000;
+    audio.currentTime = ratio * audio.duration;
+  });
+
+  audio.addEventListener('play', () => { showPlayer(); syncPlayIcon(); });
+  audio.addEventListener('pause', syncPlayIcon);
 })();
 </script>
-
 </body>
 </html>
