Add card for 'The Madness of Faith' with audio
Added a new card for 'The Madness of Faith' with audio reflections and links.

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -75,6 +75,49 @@
   <main class="wrap">
     <section class="grid">
 
+<!-- =========================================
+           CARD: THE MADNESS OF FAITH
+           ========================================= -->
+      <article class="card">
+        <div class="left">
+          <a class="book-link" href="/reflections/pages/the-madness-of-fath/read.html" target="_blank" rel="noopener">
+            <img class="book-cover"
+                 src="/reflections/pages/the-madness-of-fath/2A065E2E-B3E9-487F-90B9-9B41F90D1DD5.png"
+                 alt="The Madness of Faith cover"
+                 onerror="this.src='/reflections/assets/placeholder.jpg'">
+          </a>
+        </div>
+
+        <div class="right">
+          <h3>
+            <a class="title-link" href="/reflections/pages/the-madness-of-fath/read.html" target="_blank" rel="noopener">
+              The Madness of Faith
+            </a>
+          </h3>
+
+          <p>Faith was never meant to destroy the mind but to guide it toward clarity. Real belief must enlighten, not enslave.</p>
+          <div class="playlist">
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3"
+                    data-title="the madness if faith">
+              ▶ The MADNESS OF FAITH
+            </button>
+
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-god-we-created/the-gods-we-create.mp3"
+                    data-title="The God We Created">
+              ▶ The God We Created (Short)
+            </button>
+          </div>
+          
+          <div class="meta">
+            <div class="share-group"
+                 data-share-url="https://stonegrillresto.net/reflections/pages/the-madness-of-fath/read.html"
+                 data-share-title="The Madness of Faith — Ninox Antolihao">First Edition 2025 •</div>
+          </div>
+        </div>
+      </article>
+
       <!-- =========================================
            11) CARD: THE MIRROR OF WORSHIP
            ========================================= -->
@@ -414,7 +457,19 @@
           </h3>
 
           <p>How Prayer Shapes Our Identity.</p>
+          <div class="playlist">
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-inner-listener/theinnerlistener.mp3"
+                    data-title="The Inner Listener">
+              ▶ The Inner Listener
+            </button>
 
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/subconsciousmind/subcon.mp3"
+                    data-title="The Subconscious Mind">
+              ▶ The Subconscious Mind
+            </button>
+          </div>
           <p class="meta">
             First Edition 2025 •
             <a class="title-link" href="/reflections/pages/the-paradox-of-god/The_Paradox_of_God.pdf" target="_blank" rel="noopener">PDF</a>
@@ -423,22 +478,6 @@
           <div class="share-group"
                data-share-url="https://stonegrillresto.net/reflections/pages/the-inner-listener/read.html"
                data-share-title="The Paradox of God — Ninox Antolihao"></div>
-
-          <section class="audio-wrap" id="audioMount-prayer">
-            <p class="label">🎧: <strong>The Inner Listener</strong></p>
-            <audio controls preload="auto" style="width:100%">
-              <source src="/reflections/pages/the-inner-listener/theinnerlistener.mp3" type="audio/mpeg">
-              Your browser does not support the audio element.
-            </audio>
-          </section>
-
-          <section class="audio-wrap" id="audioMount-madness-inner">
-            <p class="label">🎧 Audio Reflection: <strong>The Madness of Faith</strong></p>
-            <audio controls preload="auto" style="width:100%">
-              <source src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3" type="audio/mpeg">
-              Your browser does not support the audio element.
-            </audio>
-          </section>
         </div>
       </article>
 
@@ -468,64 +507,26 @@
             First Edition 2025 • Essay •
             <a class="title-link" href="/reflections/pages/transcendence/transcendence.pdf" target="_blank" rel="noopener">PDF</a>
           </p>
+        <div class="playlist">
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/transcendence/transcendence.mp3"
+                    data-title="Transcendence">
+              ▶ TRANSCENDENCE
+            </button>
 
-          <section class="audio-wrap" id="audioMount-transcendence">
-            <p class="label">🎧 Audio Reflection: <strong>TRANSCENDENCE</strong></p>
-            <audio controls preload="auto" style="width:100%">
-              <source src="/reflections/pages/transcendence/transcendence.mp3" type="audio/mpeg">
-              Your browser does not support the audio element.
-            </audio>
-          </section>
-
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/moral-choice/moralchoice.mp3"
+                    data-title="ONENESS">
+              ▶ ONENESS AND DUALITY
+            </button>
+          </div>
           <div class="share-group"
                data-share-url="https://stonegrillresto.net/reflections/pages/transcendence/read.html"
                data-share-title="TRANSCENDENCE — Unraveling the Enigma of Absolute Truth"></div>
         </div>
       </article>
 
-      <!-- =========================================
-           CARD: THE MADNESS OF FAITH
-           ========================================= -->
-      <article class="card">
-        <div class="left">
-          <a class="book-link" href="/reflections/pages/the-madness-of-fath/read.html" target="_blank" rel="noopener">
-            <img class="book-cover"
-                 src="/reflections/pages/the-madness-of-fath/2A065E2E-B3E9-487F-90B9-9B41F90D1DD5.png"
-                 alt="The Madness of Faith cover"
-                 onerror="this.src='/reflections/assets/placeholder.jpg'">
-          </a>
-        </div>
-
-        <div class="right">
-          <h3>
-            <a class="title-link" href="/reflections/pages/the-madness-of-fath/read.html" target="_blank" rel="noopener">
-              The Madness of Faith
-            </a>
-          </h3>
-
-          <p>Faith was never meant to destroy the mind but to guide it toward clarity. Real belief must enlighten, not enslave.</p>
-          <div class="playlist">
-            <button class="track-link" type="button"
-                    data-src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3"
-                    data-title="the madness if faith">
-              ▶ The MADNESS OF FAITH
-            </button>
-
-            <button class="track-link" type="button"
-                    data-src="/reflections/pages/the-god-we-created/the-gods-we-create.mp3"
-                    data-title="The God We Created">
-              ▶ The God We Created (Short)
-            </button>
-          </div>
-          
-          <div class="meta">
-            <div class="share-group"
-                 data-share-url="https://stonegrillresto.net/reflections/pages/the-madness-of-fath/read.html"
-                 data-share-title="The Madness of Faith — Ninox Antolihao">First Edition 2025 •</div>
-          </div>
-        </div>
-      </article>
-
+      P
       <!-- =========================================
            2) CARD: The LOST LANGUAGE OF METAPHOR
            ========================================= -->
